--- a/css/styles.css
+++ b/css/styles.css
@@ -852,7 +852,7 @@ margin-bottom: 72px;
     padding-left: 16px;
     border-radius: 4px;
     border: 1px solid #FFF;
-    color: #FFF;
+    color: #fff;
     background-color: transparent;
     font-size: 12px;
     font-weight: 400;
