--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ body {
   }
 }
 .menu {
-  display: none;
+    display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -234,15 +234,72 @@ body {
   transform: translateX(0%);
 }
 
+
+@media screen and (max-width: 767px) {
 .mobile-menu-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  background-color: transparent;
-  border: none;
-  margin-left: 0;
-  line-height: 0;
-  fill: rgba(46, 47, 66, 1);
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        padding: 0;
+        line-height: 0;
+        color: #2E2F42;
+        width: 24px;
+        height: 24px;
+
+    }
+
+    }
+
+@media screen and (max-width: 767px) {
+    .mobile-studio-activ {
+        color: #404BBF;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+    .mobile-menu-btn-link {
+        color: #2E2F42;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        padding-top: 8px;
+        padding-bottom: 8px;
+    }
+
+}
+@media screen and (max-width: 767px) {
+    .mob-contacts-link {
+        color: #4D5AE5;
+        font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            font-style: normal;
+    }
+}
+
+
+@media screen and (max-width: 767px) {
+    .mob-contacts-link-post {
+        color: #434455;
+        font-size: 20px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+    }
 }
 
 .mob-soc-list {
@@ -1200,6 +1257,9 @@ margin-bottom: 72px;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
 
 
 /* ================== /MODAL WINDOW ===================== */
